# Rustrans

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deny.toml  docker-compose.yml  security.md
.github/workflows/: ci-fixed.yml  ci.yml
scripts/: ci-test.sh
src/: admin.rs  config.rs  error.rs  handlers.rs  health.rs  language.rs  main.rs  models.rs  translator.rs
static/: admin.html
