[package]
name = "Rustrans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
whichlang = "0.1"
pangu = "0.2"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
thiserror = "2.0"
validator = { version = "0.20", features = ["derive"] }
regex = "1.11"
lazy_static = "1.5"
futures = "0.3"
parking_lot = "0.12"